--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,12 @@ branches:
 language: python
 python:
     - 2.7
+sudo: false
+addons.apt.packages:
+    - python-libvirt
+    - python-yaml
+    - make
 before_install:
-    - sudo apt-get update -qq
-    - sudo apt-get install python-libvirt python-yaml
     - wget http://downloads.sourceforge.net/project/ssdeep/ssdeep-2.12/ssdeep-2.12.tar.gz
     - tar -zxvf ssdeep-2.12.tar.gz
     - cd ssdeep-2.12
