--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ itsdangerous==0.24
 Jinja2==2.8
 Mako==1.0.1
 MarkupSafe==0.23
+MySQL-python==1.2.3
 ndg-httpsclient==0.4.0
 nose==1.3.7
 http://pefile.googlecode.com/files/pefile-1.2.10-139.tar.gz#egg=pefile
