--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
     - ./configure && make
     - sudo make install
     - cd ..
-    - sed 's/connection = .*/connection =/' conf/cuckoo.conf
+    - sed -i 's/connection = .*/connection =/' conf/cuckoo.conf
 install:
     - pip install -r requirements.txt
 script:
