--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ addons.apt.packages:
     - python-yaml
     - make
 before_install:
-    - wget http://downloads.sourceforge.net/project/ssdeep/ssdeep-2.12/ssdeep-2.12.tar.gz
+    - wget  http://sourceforge.net/projects/ssdeep/files/ssdeep-2.13/ssdeep-2.13.tar.gz
     - tar -zxvf ssdeep-2.12.tar.gz
     - cd ssdeep-2.12
     - ./configure && make
