Added note about nictrace

--- a/conf/auxiliary.conf
+++ b/conf/auxiliary.conf
@@ -11,6 +11,8 @@ tcpdump = /usr/sbin/tcpdump
 # configuration.
 
 # Specify a Berkeley packet filter to pass to tcpdump.
+# Note: packer filtering is not possible when using "nictrace" functionality
+# from VirtualBox (for example dumping inter-VM traffic).
 # bpf = not arp
 
 [mitm]
