fix microsoft share

--- a/conf/cuckoo.conf
+++ b/conf/cuckoo.conf
@@ -92,7 +92,7 @@ internet = none
 # configuration this might not be sufficient. In such case you would need to 
 # initialise routing tables manually. Note that enabling this option won't
 # affect main routing table.
-auto_rt = yes
+auto_rt = no
 
 # Routing table name/id for "dirty line" interface. If "dirty line" is
 # also default gateway in the system you can leave "main" value. Otherwise add
