--- a/conf/virtualbox.conf
+++ b/conf/virtualbox.conf
@@ -40,7 +40,7 @@ ip = 10.31.37.101
 # when dumping network traffic from this machine with tcpdump. If specified,
 # overrides the default interface specified in auxiliary.conf
 # Example (vboxnet0 is the interface name):
-# interface = vboxnet0
+interface = vboxnet0
 
 # (Optional) Specify the IP of the Result Server, as your virtual machine sees it.
 # The Result Server will always bind to the address and port specified in cuckoo.conf,
@@ -68,10 +68,12 @@ ip = 10.31.37.101
 label = Windows8.1
 platform = windows
 ip = 10.31.37.102
+interface = vboxnet0
 [Windows8.1x64]
 label = Windows8.1x64
 platform = windows
 ip = 10.31.37.103
+interface = vboxnet0
 
 [honeyd]
 # For more information on this VM please refer to the "services" section of
