--- a/conf/vpn.conf
+++ b/conf/vpn.conf
@@ -4,14 +4,14 @@
 enabled = no
 
 # Comma-separated list of the available VPNs.
-vpns = vpn0
+vpns = tun0
 
-[vpn0]
+[tun0]
 # Name of this VPN. The name is represented by the filepath to the
 # configuration file, e.g., cuckoo would represent /etc/openvpn/cuckoo.conf
 # Note that you can't assign the names "none" and "internet" as those would
 # conflict with the routing section in cuckoo.conf.
-name = vpn0
+name = tun0
 
 # The description of this VPN which will be displayed in the web interface.
 # Can be used to for example describe the country where this VPN ends up.
